--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>gestion_orquestas</finalName>
+		<finalName>eaea</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
