--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,9 +14,20 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Build and Push Docker Image
-        uses: owner/repo/.github/workflows/publish-docker-image.yaml@main # Cambia "owner/repo" por el correcto
+      - name: Usar la acción para extraer la versión
+        uses: ./.github/actions/extract-version
+        id: extract_version
         with:
-          acr_name: "myacrname"
-          image_name: "myapp"
-          image_tag: "v1.0.0"
+          file: '/pom.xml'
+
+      - name: Imprimir la versión extraída
+        id: show_version
+        run: echo "La versión es: ${{ steps.extract_version.outputs.version }}"
+
+     # - name: Build and Push Docker Image
+     #   id: build_image_and_upload
+     #   uses: ./.github/wokflows/upload_images
+     #   with:
+     #     acr_name: "myacrname"
+     #     image_name: "myapp"
+     #     image_tag: "${{ steps.extract_version.outputs.version }}"
