--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,11 +14,11 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Usar la acción para extraer la versión
-        uses: ./.github/actions/extract-version
-        id: extract_version
-        with:
-          file: '/pom.xml'
+      # - name: Usar la acción para extraer la versión
+      #   uses: ./.github/actions/extract-version
+      #   id: extract_version
+      #   with:
+      #     file: '/pom.xml'
 
       # - name: Imprimir la versión extraída
       #   id: show_version
@@ -28,6 +28,6 @@ jobs:
         id: build_image_and_upload
         uses: ./.github/wokflows/upload_images
         with:
-          acr_name: ${{ secrets.ACR_NAME}}
-          image_name: "bacckend"
-          image_tag: "4.0.0"
+          acr_name: "myacrname"
+          image_name: "myapp"
+          image_tag: "${{ steps.extract_version.outputs.version }}"
