--- a/.github/workflows/upload_image.yaml
+++ b/.github/workflows/upload_image.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/publish-docker-image.yaml
 name: Publish Docker Image to ACR
 
 on:
@@ -18,12 +17,15 @@ on:
         type: string
         default: "latest"
       arm_tenant_id:
+        type: string
         description: "Azure Tenant ID"
         required: true
       arm_client_id:
+        type: string
         description: "Azure Client ID"
         required: true
       arm_client_secret:
+        type: string
         description: "Azure Client Secret"
         required: true
 jobs:
