Update CI.yaml se cambia la ruta del actions

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,7 +23,7 @@ jobs:
       #   run: echo "La versión es: ${{ steps.extract_version.outputs.version }}"
 
       - name: Build and Push Docker Image
-        uses: ./.github/workflows/upload_image.yaml
+        uses: ./.github/actions/upload_image
         with:
           acr_name: ${{ secrets.ACR_NAME }}
           image_name: "myapp"
