Update action.yaml se agrega el shell en cada uno de los run

--- a/.github/actions/upload_image/action.yaml
+++ b/.github/actions/upload_image/action.yaml
@@ -34,13 +34,17 @@ runs:
           -u ${{ inputs.arm_client_id }} \
           -p ${{ inputs.arm_client_secret }} \
           --tenant ${{ inputs.arm_tenant_id }}
+      shell: bash
     - name: Log in to ACR
       run: |
         az acr login --name ${{ inputs.acr_name }}
+      shell: bash
     - name: Build Docker Image
       run: |
         docker build -t ${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}:${{ inputs.image_tag }} .
+      shell: bash
     - name: Push Docker Image
       run: |
         docker push ${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}:${{ inputs.image_tag }}
+      shell: bash
         
