--- a/manifests/backend/values.yaml
+++ b/manifests/backend/values.yaml
@@ -4,10 +4,11 @@
 
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
-
-
-backend:
-  image: ""
+image:
+  repository: ""
+  tag: ""
+  pullSecret: ""
+database:
   SPRING_DB_HOST: ""
   SPRING_DB_PORT: ""
   SPRING_DB_NAME: ""
