Update CI.yaml se añade la llamada a la action del deploy

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -31,3 +31,16 @@ jobs:
           arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
           arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
           arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+
+      - name: Upload an image 
+        uses: ./.github/actions/deploy
+        with:
+          acr_name: ${{ secrets.ACR_NAME }}
+          image_name: "myapp"
+          image_tag: "4.0.0"
+          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
+          aks_cluster_name: ${{ secrets.AKS_NAME }}
+          helm_chart_path: ./manifest/backend
