--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -60,9 +60,9 @@ runs:
     - name: Login to Azure with Service Principal
       run: |
         az login --service-principal \
-          -u ${{ secrets.ARM_CLIENT_ID }} \
-          -p ${{ secrets.ARM_CLIENT_SECRET }} \
-          --tenant ${{ secrets.ARM_TENANT_ID }}
+          -u ${{ inputs.arm_client_id }} \
+          -p ${{ inputs.arm_client_secret }} \
+          --tenant ${{ inputs.arm_tenant_id }}
       shell: bash
   
     - name: Get AKS credentials
