Update action.yaml se añade debug para ver las varaibles

--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -51,7 +51,11 @@ runs:
   steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
+    - name: Print input values
+      run: |
+        echo "Resource Group: ${{ inputs.aks_resource_group }}"
+        echo "Cluster Name: ${{ inputs.aks_cluster_name }}"
+      shell: bash
     - name: Login to Azure with Service Principal
       run: |
         az login --service-principal \
