--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -53,8 +53,7 @@ runs:
       uses: actions/checkout@v3
     - name: Print input values
       run: |
-        echo "Resource Group: ${{ inputs.aks_resource_group }}"
-        echo "Cluster Name: ${{ inputs.aks_cluster_name }}"
+        echo "Helm path: ${{ inputs.helm_chart_path }}"
       shell: bash
     - name: Login to Azure with Service Principal
       run: |
