Update action.yaml se añaden las varib¡ables del values.yaml

--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -1,6 +1,26 @@
 name: 'Deploy to AKS with Helm'
 description: 'Deploys an app to AKS using Helm'
 inputs:
+  db_name:
+    description: 'The database name'
+    required: true
+    default: ''
+  db_pass:
+    description: 'The database password'
+    required: true
+    default: ''
+  db_port:
+    description: 'The database port'
+    required: true
+    default: ''
+  db_user:
+    description: 'The database username'
+    required: true
+    default: ''
+  db_host:
+    description: 'The database host'
+    required: true
+    default: ''
   acr_name:
     description: 'Azure Container Registry name'
     required: true
@@ -71,11 +91,17 @@ runs:
       run: |
         curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
       shell: bash
+
     - name: Deploy with Helm
       run: |
         helm upgrade --install ${GITHUB_SHA} ./manifests/backend \
         --namespace default \
         --set image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }} \
         --set image.tag=${{ inputs.image_tag }} \
-        --set image.pullSecret=${{ inputs.acr_secret_name }}
+        --set image.pullSecret=${{ inputs.acr_secret_name }} \
+        --set database.SPRING_DB_HOST=${{ inputs.db_host }} \
+        --set database.SPRING_DB_PORT=${{ inputs.db_port }} \
+        --set database.SPRING_DB_NAME=${{ inputs.db_name }} \
+        --set database.SPRING_DB_USER=${{ inputs.db_user }} \
+        --set database.SPRING_DB_PASSWORD=${{ inputs.db_pass }}
       shell: bash
