--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -44,4 +44,10 @@ jobs:
           aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
           aks_cluster_name: ${{ secrets.AKS_NAME }}
           acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
+          db_name: ${{ secrets.DB_NAME }}
+          db_pass: ${{ secrets.DB_PASSWORD }}
+          db_port: ${{ secrets.DB_PORT }}
+          db_user: ${{ secrets.DB_USER }}
+          db_host: ${{ secrets.DB_HOST }}
           helm_chart_path: "./manifest/backend"
+          
