--- a/manifests/backend/values.yaml
+++ b/manifests/backend/values.yaml
@@ -5,8 +5,8 @@
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 image:
-  repository: ""
-  tag: ""
+  repository: "jrochadev/java"
+  tag: "1.0"
   pullSecret: ""
 database:
   SPRING_DB_HOST: ""
