--- a/manifests/backend/values.yaml
+++ b/manifests/backend/values.yaml
@@ -5,7 +5,7 @@
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 image:
-  repository: "jrochadev/java"
+  repository: "jrochadev/backend"
   tag: "1.0"
   pullSecret: ""
 database:
