--- a/.github/actions/upload_image/action.yaml
+++ b/.github/actions/upload_image/action.yaml
@@ -19,6 +19,7 @@ inputs:
     required: true
 
 runs:
+  using: 'composite'
   steps:
     - name: Checkout repository
       uses: actions/checkout@v3
