--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -1,6 +1,26 @@
 name: 'Deploy to AKS with Helm'
 description: 'Deploys an app to AKS using Helm'
 inputs:
+   db_name:
+    description: 'The database name'
+    required: true
+    default: ''
+  db_pass:
+    description: 'The database password'
+    required: true
+    default: ''
+  db_port:
+    description: 'The database port'
+    required: true
+    default: ''
+  db_user:
+    description: 'The database username'
+    required: true
+    default: ''
+  db_host:
+    description: 'The database host'
+    required: true
+    default: ''
   acr_name:
     description: 'Azure Container Registry name'
     required: true
