--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -25,25 +25,15 @@ jobs:
         run: |
           ./upload_version.sh "$NEW_VERSION"
 
-      # - name: Usar la acción para extraer la versión
-      #   uses: ./.github/actions/extract-version
-      #   id: extract_version
-      #   with:
-      #     file: '/pom.xml'
-
-      # - name: Imprimir la versión extraída
-      #   id: show_version
-      #   run: echo "La versión es: ${{ steps.extract_version.outputs.version }}"
-
-      # - name: Build and Push Docker Image
-      #   uses: ./.github/actions/upload_image
-      #   with:
-      #     acr_name: ${{ secrets.ACR_NAME }}
-      #     image_name: "myapp"
-      #     image_tag: "4.0.0"
-      #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      - name: Build and Push Docker Image
+        uses: ./.github/actions/upload_image
+        with:
+          acr_name: ${{ secrets.ACR_NAME }}
+          image_name: "myapp-backend"
+          image_tag: "${{ env.NEW_VERSION }}"
+          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Upload an image 
         uses: ./.github/actions/deploy
@@ -66,4 +56,6 @@ jobs:
           harbor_username: ${{ secrets.HARBOR_USER }}
           harbor_password: ${{ secrets.HARBOR_PASS }}
           harbor_ip: ${{ secrets.HARBOR_IP }}
+          acr_password: ${{ secrets.ACR_PASS }}
+          acr_email: ${{ secrets.ACR_EMAIL }}
           
