Update action.yaml se añade la accion de borrado de secreto

--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -112,6 +112,12 @@ runs:
       run: |
         helm registry login ${{ inputs.harbor_ip }} --username ${{ inputs.harbor_username }} --password ${{ inputs.harbor_password }}
       shell: bash
+
+    - name: Delete secret if exists
+      run: |
+        kubectl delete secret ${{inputs.acr_secret_name}} --ignore-not-found 
+      shell: bash
+
     
     - name: Create acr secret
       run: |
