Update action.yaml se corrigen errores de sintaxis

--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -136,7 +136,7 @@ runs:
           --set "database.SPRING_DB_PORT=${{ inputs.db_port }}" \
           --set "database.SPRING_DB_NAME=${{ inputs.db_name }}" \
           --set "database.SPRING_DB_USER=${{ inputs.db_user }}" \
-          --set "database.SPRING_DB_PASSWORD=${{ inputs.db_pass }}"
+          --set "database.SPRING_DB_PASSWORD=${{ inputs.db_pass }}" \
           --set "image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}" \
           --set "image.tag=${{ inputs.image_tag }}" \
           --set "image.pullSecret=${{ inputs.acr_secret_name }}"
