--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -137,9 +137,9 @@ runs:
           --set "database.SPRING_DB_NAME=${{ inputs.db_name }}" \
           --set "database.SPRING_DB_USER=${{ inputs.db_user }}" \
           --set "database.SPRING_DB_PASSWORD=${{ inputs.db_pass }}" \
-          --set "image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}" \
-          --set "image.tag=${{ inputs.image_tag }}" \
       shell: bash
-
-          # --set "image.pullSecret=${{ inputs.acr_secret_name }}"
+          
+# --set "image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}" \
+# --set "image.tag=${{ inputs.image_tag }}" \
+# --set "image.pullSecret=${{ inputs.acr_secret_name }}"
       
