--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -137,6 +137,10 @@ runs:
           --set "database.SPRING_DB_NAME=${{ inputs.db_name }}" \
           --set "database.SPRING_DB_USER=${{ inputs.db_user }}" \
           --set "database.SPRING_DB_PASSWORD=${{ inputs.db_pass }}" \
+          --set "image.repository=jrochadev/backend" \
+          --set "image.tag=${{ inputs.image_tag }}" \
+
+
       shell: bash
           
 # --set "image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}" \
