--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -138,7 +138,7 @@ runs:
           --set "database.SPRING_DB_USER=${{ inputs.db_user }}" \
           --set "database.SPRING_DB_PASSWORD=${{ inputs.db_pass }}" \
           --set "image.repository=jrochadev/backend" \
-          --set "image.tag=${{ inputs.image_tag }}" \
+          --set "image.tag=1.0" \
 
 
       shell: bash
