--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -25,15 +25,15 @@ jobs:
         run: |
           ./upload_version.sh "$NEW_VERSION"
 
-      # - name: Build and Push Docker Image
-      #   uses: ./.github/actions/upload_image
-      #   with:
-      #     acr_name: ${{ secrets.ACR_NAME }}
-      #     image_name: "myapp-backend"
-      #     image_tag: "${{ env.NEW_VERSION }}"
-      #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      - name: Build and Push Docker Image
+        uses: ./.github/actions/upload_image
+        with:
+          acr_name: ${{ secrets.ACR_NAME }}
+          image_name: "myapp-backend"
+          image_tag: "${{ env.NEW_VERSION }}"
+          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
 
       - name: Upload an image 
