--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -5,17 +5,12 @@ on:
 
 jobs:
   deploy:
-    runs-on: runner-stemdo-labs
+    runs-on: self-hosted
 
     steps:
 
       - name: Check out repository
         uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
 
       - name: Set up script permissions
         run: |
