--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -5,9 +5,14 @@ on:
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: runner-stemdo-labs
 
     steps:
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
       - name: Check out repository
         uses: actions/checkout@v3
@@ -52,5 +57,4 @@ jobs:
           --set database.port=${{ secrets.DB_PORT }} \
           --set database.user=${{ secrets.DB_USER }} \
           --set database.host=${{ secrets.DB_HOST }} \
-          --set acr.password=${{ secrets.ACR_PASS }} \
           --set acr.email=${{ secrets.ACR_EMAIL }}
