--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -5,15 +5,9 @@ on:
 
 jobs:
   deploy:
-    runs-on: runner-stemdo-labs
+    runs-on: self-hosted
 
     steps:
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
       - name: Check out repository
         uses: actions/checkout@v3
 
