--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,3 +1,4 @@
+# .github/workflows/main-deploy.yaml
 name: Main Deployment Workflow
 
 on:
@@ -7,12 +8,12 @@ jobs:
   deploy:
     runs-on: runner-stemdo-labs
 
-
     steps:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+
       - name: Check out repository
         uses: actions/checkout@v3
 
@@ -22,7 +23,6 @@ jobs:
           chmod +x ./upload_version.sh
 
       - name: Extract and increment version
-        id: extract_version
         run: |
           NEW_VERSION=$(./extract_version.sh)
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
@@ -32,28 +32,35 @@ jobs:
           ./upload_version.sh "$NEW_VERSION"
 
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v4
+        uses: ./.github/actions/upload_image
         with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.ACR_NAME }}/myapp-backend:${{ env.NEW_VERSION }}
+          acr_name: ${{ secrets.ACR_NAME }}
+          image_name: "myapp-backend"
+          image_tag: "${{ env.NEW_VERSION }}"
+          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
-      - name: Deploy to Kubernetes
-        run: |
-          helm upgrade --install backend ./charts/backend \
-          --namespace default \
-          --set image.repository=${{ secrets.ACR_NAME }}/myapp-backend \
-          --set image.tag=${{ env.NEW_VERSION }} \
-          --set acr.username=${{ secrets.HARBOR_USER }} \
-          --set acr.password=${{ secrets.HARBOR_PASS }} \
-          --set acr.server=${{ secrets.HARBOR_IP }} \
-          --set acr.secretName=${{ secrets.ACR_SECRET_NAME }} \
-          --set aks.clusterName=${{ secrets.AKS_NAME }} \
-          --set aks.resourceGroup=${{ secrets.RESOURCE_GROUP_NAME }} \
-          --set database.name=${{ secrets.DB_NAME }} \
-          --set database.password=${{ secrets.DB_PASSWORD }} \
-          --set database.port=${{ secrets.DB_PORT }} \
-          --set database.user=${{ secrets.DB_USER }} \
-          --set database.host=${{ secrets.DB_HOST }} \
-          --set acr.email=${{ secrets.ACR_EMAIL }}
+      - name: Upload an image
+        uses: ./.github/actions/deploy
+        with:
+          acr_name: ${{ secrets.ACR_NAME }}
+          image_name: "myapp-backend"
+          image_tag: "${{ env.NEW_VERSION }}"
+          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
+          aks_cluster_name: ${{ secrets.AKS_NAME }}
+          acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
+          db_name: ${{ secrets.DB_NAME }}
+          db_pass: ${{ secrets.DB_PASSWORD }}
+          db_port: ${{ secrets.DB_PORT }}
+          db_user: ${{ secrets.DB_USER }}
+          db_host: ${{ secrets.DB_HOST }}
+          chart_name: "backend"
+          harbor_username: ${{ secrets.HARBOR_USER }}
+          harbor_password: ${{ secrets.HARBOR_PASS }}
+          harbor_ip: ${{ secrets.HARBOR_IP }}
+          acr_password: ${{ secrets.ACR_PASS }}
+          acr_email: ${{ secrets.ACR_EMAIL }}
