--- a/.github/actions/CD/action.yaml
+++ b/.github/actions/CD/action.yaml
@@ -100,6 +100,18 @@ runs:
           --tenant ${{ inputs.arm_tenant_id }}
       shell: bash
 
+    - name: Set up kubectl
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y apt-transport-https ca-certificates curl
+        curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+        echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
+        sudo apt-get update
+        sudo apt-get install -y kubectl
+        kubectl version --client
+      shell: bash
+    
+
     - name: Install Helm
       shell: bash
       run: |
