Update action.yaml se cambia l ainstalacion de kubectl

--- a/.github/actions/CD/action.yaml
+++ b/.github/actions/CD/action.yaml
@@ -105,7 +105,8 @@ runs:
         sudo apt-get update
         sudo apt-get install -y apt-transport-https ca-certificates curl
         curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-        echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
+        DISTRO=$(lsb_release -c | awk '{print $2}')
+        echo "deb https://apt.kubernetes.io/ kubernetes-${DISTRO} main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
         sudo apt-get update
         sudo apt-get install -y kubectl
         kubectl version --client
