--- a/.github/actions/CD/action.yaml
+++ b/.github/actions/CD/action.yaml
@@ -105,17 +105,13 @@ runs:
           --tenant ${{ inputs.arm_tenant_id }}
       shell: bash
 
-    - name: Set up kubectl
+    - name: Install kubectl using the official script
       run: |
-        sudo apt-get update
-        sudo apt-get install -y apt-transport-https ca-certificates curl
-        curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-        DISTRO=$(lsb_release -c | awk '{print $2}')
-        echo "deb https://apt.kubernetes.io/ kubernetes-${DISTRO} main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
-        sudo apt-get update
-        sudo apt-get install -y kubectl
+        curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+        sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
         kubectl version --client
       shell: bash
+    
     
 
     - name: Install Helm
