Update action.yaml se cmabian los valors del secret

--- a/.github/actions/CD/action.yaml
+++ b/.github/actions/CD/action.yaml
@@ -140,11 +140,10 @@ runs:
     
     - name: Create Docker registry secret in default namespace
       run: |
-        kubectl create secret docker-registry my-docker-secret \
-          --docker-server=***.azurecr.io \
-          --docker-username=${{ secrets.AZURE_USERNAME }} \
-          --docker-password=${{ secrets.AZURE_PASSWORD }} \
-          --docker-email=${{ secrets.AZURE_EMAIL }} \
+        kubectl create secret docker-registry ${{ inputs.acr_secret_name}} \
+          --docker-server=*${{ inputs.acr_name}}.azurecr.io \
+          --docker-username=${{ inputs.arm_client_id }} \
+          --docker-password=${{ inputs.arm_client_secret }} \
           --namespace=default
       shell: bash
     
