--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -30,15 +30,15 @@ jobs:
         run: |
           ./upload_version.sh "$NEW_VERSION"
 
-      #- name: CI
-      #  uses: ./.github/actions/CI
-      #  with:
-      #    acr_name: ${{ secrets.ACR_NAME }}
-      #    image_name: "myapp-backend"
-      #    image_tag: "${{ env.NEW_VERSION }}"
-      #    arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      #    arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      #    arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      - name: CI
+        uses: ./.github/actions/CI
+        with:
+          acr_name: ${{ secrets.ACR_NAME }}
+          image_name: "myapp-backend"
+          image_tag: "${{ env.NEW_VERSION }}"
+          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
       - name: CD
         uses: ./.github/actions/CD
