--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -29,40 +29,38 @@ jobs:
       - name: Upload version into file
         run: |
           ./upload_version.sh "$NEW_VERSION"
-        
-      # call_backend_ci:
-      #   uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/backend-CI.yaml@feature/workflows
-      #   with:
-      #     acr_name: ${{ secrets.ACR_NAME }}
-      #     image_name: "myapp-backend"
-      #     image_tag: "${{ env.NEW_VERSION }}"
-      #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-      
-      - name: Call backend CD workflow
-        uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/backend-CD.yaml@feature/workflows
-        with:
-          acr_name: ${{ secrets.ACR_NAME }}
-          image_name: "myapp-backend"
-          image_tag: "${{ env.NEW_VERSION }}"
-          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-          aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
-          aks_cluster_name: ${{ secrets.AKS_NAME }}
-          acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
-          db_name: ${{ secrets.DB_NAME }}
-          db_pass: ${{ secrets.DB_PASSWORD }}
-          db_port: ${{ secrets.DB_PORT }}
-          db_user: ${{ secrets.DB_USER }}
-          db_host: ${{ secrets.DB_HOST }}
-          chart_name: "backend"
-          harbor_username: ${{ secrets.HARBOR_USER }}
-          harbor_password: ${{ secrets.HARBOR_PASS }}
-          harbor_ip: ${{ secrets.HARBOR_IP }}
-          acr_password: ${{ secrets.ACR_PASS }}
-          acr_email: ${{ secrets.ACR_EMAIL }}
+        # call_backend_ci:
+        #   uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/backend-CI.yaml@feature/workflows
+        #   with:
+        #     acr_name: ${{ secrets.ACR_NAME }}
+        #     image_name: "myapp-backend"
+        #     image_tag: "${{ env.NEW_VERSION }}"
+        #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+        #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+        #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+  call_backend_cd:
+    uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/backend-CD.yaml@feature/workflows
+    with:
+      acr_name: ${{ secrets.ACR_NAME }}
+      image_name: "myapp-backend"
+      image_tag: "${{ env.NEW_VERSION }}"
+      arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+      arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+      arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
+      aks_cluster_name: ${{ secrets.AKS_NAME }}
+      acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
+      db_name: ${{ secrets.DB_NAME }}
+      db_pass: ${{ secrets.DB_PASSWORD }}
+      db_port: ${{ secrets.DB_PORT }}
+      db_user: ${{ secrets.DB_USER }}
+      db_host: ${{ secrets.DB_HOST }}
+      chart_name: "backend"
+      harbor_username: ${{ secrets.HARBOR_USER }}
+      harbor_password: ${{ secrets.HARBOR_PASS }}
+      harbor_ip: ${{ secrets.HARBOR_IP }}
+      acr_password: ${{ secrets.ACR_PASS }}
+      acr_email: ${{ secrets.ACR_EMAIL }}
 
       # - name: CI
       #   uses: ./.github/actions/CI
@@ -97,3 +95,4 @@ jobs:
       #     harbor_ip: ${{ secrets.HARBOR_IP }}
       #     acr_password: ${{ secrets.ACR_PASS }}
       #     acr_email: ${{ secrets.ACR_EMAIL }}
+   
