--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -31,10 +31,13 @@ jobs:
           ./upload_version.sh "$NEW_VERSION"
 
   call_backend_cd:
+    needs: deploy
     uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/backend-CD.yaml@main
     with:
-      acr_name: ${{ secrets.ACR_NAME }}
       image_name: "myapp-backend"
+      chart_name: "backend"
+    secrets:
+      acr_name: ${{ secrets.ACR_NAME }}
       image_tag: "${{ env.NEW_VERSION }}"
       arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
       arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -47,7 +50,6 @@ jobs:
       db_port: ${{ secrets.DB_PORT }}
       db_user: ${{ secrets.DB_USER }}
       db_host: ${{ secrets.DB_HOST }}
-      chart_name: "backend"
       harbor_username: ${{ secrets.HARBOR_USER }}
       harbor_password: ${{ secrets.HARBOR_PASS }}
       harbor_ip: ${{ secrets.HARBOR_IP }}
