--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -25,6 +25,7 @@ jobs:
         run: |
           NEW_VERSION=$(./extract_version.sh)
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          echo "::set-output name=NEW_VERSION::$NEW_VERSION"
 
       - name: Upload version into file
         run: |
@@ -36,7 +37,7 @@ jobs:
     with:
       image_name: "myapp-backend"
       chart_name: "backend"
-      image_tag: "${{ env.NEW_VERSION }}"
+      image_tag: "${{ needs.deploy.outputs.NEW_VERSION }}" 
     secrets:
       acr_name: ${{ secrets.ACR_NAME }}
       arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
