--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   deploy:
     runs-on: runner-stemdo-labs
+    outputs:
+      NEW_VERSION: ${{ steps.extract_version.outputs.NEW_VERSION }}
 
     steps:
       - name: Set up Node.js
@@ -26,6 +28,8 @@ jobs:
           NEW_VERSION=$(./extract_version.sh)
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "::set-output name=NEW_VERSION::$NEW_VERSION"
+        env:
+          GITHUB_ENV: $GITHUB_ENV
 
       - name: Upload version into file
         run: |
