--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -22,14 +22,12 @@ jobs:
         run: |
           chmod +x ./extract_version.sh
           chmod +x ./upload_version.sh
-
-      - name: Extract and increment version
+      - id : extract_version 
+        name: Extract and increment version
         run: |
           NEW_VERSION=$(./extract_version.sh)
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          echo "::set-output name=NEW_VERSION::$NEW_VERSION"
-        env:
-          GITHUB_ENV: $GITHUB_ENV
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
 
       - name: Upload version into file
         run: |
@@ -74,29 +72,3 @@ jobs:
       harbor_ip: ${{ secrets.HARBOR_IP }}
       acr_password: ${{ secrets.ACR_PASS }}
       acr_email: ${{ secrets.ACR_EMAIL }}
-
-     
-
-      # - name: CD
-      #   uses: ./.github/actions/CD
-      #   with:
-      #     acr_name: ${{ secrets.ACR_NAME }}
-      #     image_name: "myapp-backend"
-      #     image_tag: "${{ env.NEW_VERSION }}"
-      #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-      #     aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
-      #     aks_cluster_name: ${{ secrets.AKS_NAME }}
-      #     acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
-      #     db_name: ${{ secrets.DB_NAME }}
-      #     db_pass: ${{ secrets.DB_PASSWORD }}
-      #     db_port: ${{ secrets.DB_PORT }}
-      #     db_user: ${{ secrets.DB_USER }}
-      #     db_host: ${{ secrets.DB_HOST }}
-      #     chart_name: "backend"
-      #     harbor_username: ${{ secrets.HARBOR_USER }}
-      #     harbor_password: ${{ secrets.HARBOR_PASS }}
-      #     harbor_ip: ${{ secrets.HARBOR_IP }}
-      #     acr_password: ${{ secrets.ACR_PASS }}
-      #     acr_email: ${{ secrets.ACR_EMAIL }}
