--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -77,3 +77,4 @@ jobs:
       harbor_ip: ${{ secrets.HARBOR_IP }}
       acr_password: ${{ secrets.ACR_PASS }}
       acr_email: ${{ secrets.ACR_EMAIL }}
+      resource_group: ${{ secrets.RESOURCE_GROUP }}
