se le da valor a el hpa

--- a/chart/custom_values.yaml
+++ b/chart/custom_values.yaml
@@ -25,9 +25,9 @@ database:
 # Esto habilita y configura el escalado horizontal de pods basado en el uso de CPU
 autoscaling:
     enabled: true  # Habilita el escalado automático (true/false)
-    minReplicas: ""  # Número mínimo de réplicas para la aplicación (cuando la carga es baja)
-    maxReplicas: ""  # Número máximo de réplicas para la aplicación (cuando la carga es alta)
-    targetCPUUtilizationPercentage: ""  # Porcentaje de utilización de CPU que desencadenará el escalado (por ejemplo, escalar si el uso de CPU supera el 60%)
+    minReplicas: 1  # Número mínimo de réplicas para la aplicación (cuando la carga es baja)
+    maxReplicas: 10  # Número máximo de réplicas para la aplicación (cuando la carga es alta)
+    targetCPUUtilizationPercentage: 60  # Porcentaje de utilización de CPU que desencadenará el escalado (por ejemplo, escalar si el uso de CPU supera el 60%)
 
 # Configuración de sondas (probes) para verificar la salud de la aplicación
 # La readinessProbe se usa para determinar si el contenedor está listo para recibir tráfico
